--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -1,8 +1,11 @@
 <div class="main-section">
   <!-- Section 1 -->
   <div class="intro-hero">
-    <div class="image-overlay"></div>
-    <img *ngFor="let img of imgs; let i = index" [src]='img' [class.active]="i === currentIndex" rel="preload">
+    <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+    <div *ngIf="imagesLoaded" [ngClass]="{ 'preload-width': !imagesLoaded }">
+      <div class="image-overlay"></div>
+      <img *ngFor="let img of imgs; let i = index" [src]='img' [class.active]="i === currentIndex">
+    </div>
     <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
@@ -37,10 +40,6 @@
          class="btn btn_news">{{ 'MAIN.SHARED.NAVIGATION_LINKS.LEARN_MORE' | translate }}</a>
     </div>
   </div>
-  <!--  <div class="quote-container">-->
-  <!--    <p class="quote-text">“{{ 'MAIN.HOME.PILATES_QUOTE' | translate }}”</p>-->
-  <!--    <p class="quote-author">— {{ 'MAIN.HOME.JOSEPH_PILATES' | translate }}</p>-->
-  <!--  </div>-->
   <h3 class="testimonials-heading section-title">{{ 'MAIN.HOME.TESTIMONIALS_TITLE' | translate }}</h3>
   <div class="testimonials-container">
     <div class="testimonial-card" *ngFor="let t of testimonials">
