adjust logic for loading images in news and about us

--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.html
@@ -11,7 +11,8 @@
       </div>
     </div>
   </div>
-  <a routerLink="/reservations"
+  <a  *ngIf="imagesLoaded"
+    routerLink="/reservations"
      class="btn btn_spacing">{{
       'MAIN.HEADER.NAV.RESERVATIONS_LINK' +
       '' | translate
